# zyn-ui-two

./: CMakeLists.txt  Makefile  README  constraint-layout.cpp  constraint-layout.h  draw.c  draw.h  factory.cpp  grid.c  grid.h  input.yml  layout.cpp  layout.h  main.c  resources.qrc  view.c  view.cpp  view.h  widget.h
datastore/: variant.h
dsp/: filter.h
nanovg/: nanovg_gl.h
qml/: ActiveView.qml  AdVoice.qml  AltKnob.qml  AmpView.qml  BankView.qml  Button.qml  ControlPane.qml  DropDown.qml  EQtest.qml  EnvEdit.qml  EnvView.qml  FilterView.qml  FormantView.qml  FreqView.qml  Graph.qml  GridLayout.qml  HLayout.qml  HSlider.qml  Harmonics.qml  Keyboard.qml  Kit.qml  KitRow.qml  Knob.qml  LfoView.qml  Logo.qml  MainFooter.qml  MainMenu.qml  MainSidebar.qml  MainWindow.qml  Mixer.qml  MixerElement.qml  Module.qml  ModuleWheel.qml  OptionList.qml  PadEdit.qml  PadEnvLfoView.qml  PartSettings.qml  ResonanceEdit.qml  ReverbView.qml  Routing.qml  (+7 more)
src/: zBackground.cpp  zBackground.h  zBlank.cpp  zBlank.h  zBox.cpp  zBox.h  zButton.cpp  zButton.h  zDropDown.cpp  zDropDown.h  zDummy.cpp  zDummy.h  zEQView.cpp  zEQView.h  zEnvView.cpp  zEnvView.h  zGraph.cpp  zGraph.h  zGrid.cpp  zGrid.h  zHALayout.cpp  zHALayout.h  zHSlider.cpp  zHSlider.h  zHarmonicDist.cpp  zHarmonicDist.h  zHarmonics.cpp  zHarmonics.h  zImplicitLabel.cpp  zImplicitLabel.h  zKeyboard.cpp  zKeyboard.h  zKnob.cpp  zKnob.h  zLayout.cpp  zLayout.h  zLogo.cpp  zLogo.h  zModule.cpp  zModule.h  (+23 more)
src/layout/: constraint-layout.cpp  constraint-layout.h  layout-design.txt  lp-solve.cpp
